@@ -7,6 +7,8 @@ Changes to Version 2.0-11
 	o  fixed bug in printed representation of hypotheses with numbers starting with "-1" or "+1" (e.g., "-10") by linearHypothesis() (reported by Vincent Arel-Bundock).
 	
 	o  local version of fixef() to avoid lme4/nlme conflicts that surfaced in some situations with Anova().
+	
+	o  changed order of columns in ANOVA tables for mixed models to make them consistent with other models.
 
 Changes to Version 2.0-10
 
